# mx2-sandbox

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mx2ctl.py  pyproject.toml  run_sandbox.py  setup.ps1  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: mx2.conf
dns/: zone.dns
docs/: draft-ruiter-mx2-protocol-specification.txt
schema/: message.json
src/: __init__.py  anti_spam.py  cas.py  gateway.py  logger.py  web_server.py
tests/: __init__.py  test_anti_spam.py  test_cas.py  test_gateway.py  test_mx2ctl.py  test_web_server.py
