[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mx2-sandbox"
version = "2.0.0"
description = "Mail eXchange 2.0 (MX2) Protocol local development sandbox and specification library."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Egon Ruiter", email = "egon.ruiter@utrecht-uni.nl" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Security :: Cryptography"
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.0.0"
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes checks
    "I",   # isort imports sorting
    "D",   # pydocstyle docstring conventions
    "UP"   # pyupgrade upgrades
]
ignore = [
    "D100", # Missing docstring in public module (handled at package boundaries)
    "D104"  # Missing docstring in public package
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
